Task 9 : Devise Contact layout page and Fix some layout issues in Portfolio page

--- a/src/pages/Portfolio/Portfolio.css
+++ b/src/pages/Portfolio/Portfolio.css
@@ -48,7 +48,10 @@
 
 .MuiCardContent-root {
     padding: 5px !important;
-    
+}
+
+.layout_portfolio {
+    margin-left: 0px !important;
 }
 
 /* Dialog*/
